--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon index.js",
     "build:ui": "rm -rf build && cd ./frontend/ && npm run build --prod && cp -r build ../ && rm -rf build",
     "deploy": "git push heroku HEAD:main",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "deploy:full": "npm run build:ui && git add . && git commit -m \"completed part 3\" && git push && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "Tim",
