--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build:ui": "rm -rf build && cd ./frontend/ && npm run build --prod && cp -r build ../ && rm -rf build",
     "deploy": "git push heroku HEAD:main",
     "deploy:full": "npm run build:ui && git add . && git commit -m \"completed part 3\" && git push && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "Tim",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.30.0",
     "nodemon": "^2.0.10"
   },
   "dependencies": {
